# ZisaMemory

./: .gitignore  CMakeLists.txt  README.md  allocator_8hpp.html  allocator_8hpp.js  allocator_8hpp_source.html  annotated.html  annotated_dup.js  array_8hpp.html  array_8hpp_source.html  array__base_8hpp.html  array__base_8hpp_source.html  array__base__decl_8hpp.html  array__base__decl_8hpp.js  array__base__decl_8hpp_source.html  array__base__fwd_8hpp.html  array__base__fwd_8hpp_source.html  array__decl_8hpp.html  array__decl_8hpp.js  array__decl_8hpp_source.html  array__impl_8hpp.html  array__impl_8hpp.js  array__impl_8hpp_source.html  array__traits_8hpp.html  array__traits_8hpp.js  array__traits_8hpp_source.html  array__view_8hpp.html  array__view_8hpp.js  array__view_8hpp_source.html  array__view__decl_8hpp.html  array__view__decl_8hpp.js  array__view__decl_8hpp_source.html  array__view__fwd_8hpp.html  array__view__fwd_8hpp_source.html  array__view__impl_8hpp.html  array__view__impl_8hpp.js  array__view__impl_8hpp_source.html  block__allocator_8hpp.html  block__allocator_8hpp.js  block__allocator_8hpp_source.html  (+375 more)
.github/workflows/: basic_integrity_checks.yml  publish_docs.yml
cmake/: FindNetCDF.cmake  ZisaMemoryConfig.cmake  ZisaMemoryConfig.cmake.in  warning_flags.cmake
docs/: Doxyfile  cmake.md  conan.md  contributing.md  dependencies.md  mainpage.md
include/zisa/: CMakeLists.txt
include/zisa/cuda/: CMakeLists.txt  check_cuda.hpp
include/zisa/cuda/memory/: CMakeLists.txt  cuda_array.hpp  cuda_memory_resource.hpp  fill_cuda.hpp  fill_cuda_impl.cuh
include/zisa/io/: CMakeLists.txt  hdf5.hpp  hdf5_file.hpp  hdf5_resource.hpp  hdf5_serial_writer.hpp  hdf5_writer.hpp  hdf5_writer_fwd.hpp  hierarchical_file.hpp  hierarchical_reader.hpp  hierarchical_writer.hpp  netcdf.hpp  netcdf_file.hpp  netcdf_serial_writer.hpp  netcdf_writer.hpp
include/zisa/memory/: CMakeLists.txt  allocator.hpp  array.hpp  array_base.hpp  array_base_decl.hpp  array_base_fwd.hpp  array_cell_flags.hpp  array_decl.hpp  array_impl.hpp  array_stencil_family.hpp  array_traits.hpp  array_view.hpp  array_view_decl.hpp  array_view_fwd.hpp  array_view_impl.hpp  block_allocator.hpp  column_major.hpp  contiguous_memory.hpp  contiguous_memory_base.hpp  contiguous_memory_base_decl.hpp  contiguous_memory_base_impl.hpp  copy.hpp  copy_bytes.hpp  device_type.hpp  fill.hpp  host_contiguous_memory.hpp  host_memory_resource.hpp  memory_location.hpp  memory_resource.hpp  memory_resource_factory.hpp  row_major.hpp  scientific_constructor.hpp  shape.hpp  std_allocator_equivalence.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+56 more)
src/zisa/: CMakeLists.txt
src/zisa/cuda/: CMakeLists.txt
src/zisa/cuda/memory/: CMakeLists.txt  copy_bytes.cu  fill_cuda.cu
src/zisa/io/: CMakeLists.txt  hdf5_file.cpp  hdf5_resource.cpp  hdf5_serial_writer.cpp  hdf5_writer.cpp  hierarchcial_writer.cpp  hierarchical_file.cpp  hierarchical_reader.cpp  netcdf.cpp  netcdf_file.cpp  netcdf_serial_writer.cpp  netcdf_writer.cpp
src/zisa/memory/: CMakeLists.txt  copy_bytes.cpp
test/: CMakeLists.txt  unit_tests.cpp
test/zisa/unit_test/: CMakeLists.txt
test/zisa/unit_test/cuda/memory/: CMakeLists.txt  array_view.cu  copy_bytes.cu  fill_cuda.cu
test/zisa/unit_test/io/: CMakeLists.txt  hdf5_file.cpp  hdf5_resource.cpp  netcdf_writer.cpp
test/zisa/unit_test/memory/: CMakeLists.txt  allocator.cpp  array.cpp  array.cu  array_traits.cpp  block_allocator.cpp  contiguous_memory.cpp  contiguous_memory_base.cpp
